# deskbabel

./: .gitignore  CMakeLists.txt  COPYING  COPYING.rtf  Readme.md  qtquickcontrols2.conf  version.hpp.in
cmake/: generate_windows_product_version.cmake  version_info.h.in  version_info.rc.in
i18n/: DeskBabel_de_DE.ts
qml/: main.qml
src/: CMakeLists.txt  CPackProjectConfig.txt.in  app_model.cc  app_model.hpp  dictionary.cc  dictionary.cpp  dictionary.hpp  main.cc  translations_list_model.cc  translations_list_model.hpp
src/DeskBabelQuick/: AppModel.cpp  AppModel.hpp  CMakeLists.txt  Dictionary.cpp  Dictionary.hpp  TranslationsListModel.cpp  TranslationsListModel.hpp  app_model.cpp  app_model.hpp  dictionary.cpp  translations_list_model.cpp  translations_list_model.hpp
src/i18n/: DeskBabel_de_DE.ts
src/qml/: main.qml
src/qml/mock/DeskBabelQuick/: AppModel.qml  DataEntryModel.qml  qmldir
